fix minor rendering issue in popup panel on small viewports

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -10,6 +10,7 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
     padding: 0;
+    position: relative;
     }
 *:focus {
     outline: none;
